Add add-opens to be able to run Anonimatron in newer jvms (#234)
Add add-opens to be able to run Anonimatron in newer (but downwards compatible) java versions

Co-authored-by: Rolf <noreply@example.com>